cmake_minimum_required(VERSION 3.10)

#set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_C_STANDARD 17)

file(GLOB IMGUI_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB IMGUI_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_library(ImGui ${IMGUI_SOURCE_FILES} ${IMGUI_HEADER_FILES})